# my_game

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yaml
data/fonts/: Rijusans-License.txt
data/img/: splashscreen.psd
data/sprites/: playingCards.xml
data/spritesheets/: playingCardBacks.xml  playingCards.xml
data/textures/cards/: playingCardBacks.xml
docs/: conf.py  index.rst
src/blackjackpy/: __init__.py  __main__.py  events.py  font_manager.py  game.py  game_states.py  gameplay.py  scene_manager.py  spritesheet.py  state_manager.py
src/blackjackpy/exceptions/: application_error.py
src/blackjackpy/ui/: __init__.py
src/blackjackpy/ui/menus/: __init__.py  main_menu.py  options_menu.py  pause_menu.py
src/blackjackpy/ui/widgets/: __init__.py  ui_button.py  ui_container.py
src/my_game/: events.py  font_manager.py  game.py  gameplay.py
src/my_game/game_objects/: __init__.py  ball.py  card.py  game_object.py
src/my_game/managers/: __init__.py  asset_manager.py  state_manager.py
src/my_game/ui/: __init__.py
src/my_game/ui/widgets/: ui_button.py
