[project]
name = "my_game"
description = "My journey to learning pygame."
authors = [
    {name = "Ramon Meza", email = "ramon_meza@live.com"},
]
readme = "README.md"
license = {text = "GNUv3"}

requires-python = "==3.13.*"
dynamic = ["version"]

dependencies = ["pygame>=2.6.1"]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.2",
    "black>=24.10.0",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.4.0",
]

[tool.pdm.scripts]
build-docs = "sphinx-build -b html docs docs/html"
game = "python -m src.gamedev"
format = "black ."
lint = "pylint ."

[tool.pdm]
distribution = false

[tool.pdm.version]
source = "file"
path = "src//__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
